syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.tradesystem.service";
option java_outer_classname = "TradeSystemService";
option objc_class_prefix = "HLW";

package tradeService;

//柜台service
service TradeSystem {
    // Sends a greeting
    rpc takeOrder (UserOrderRequest) returns (UserOrderReply) {}
    rpc cancelOrder (CancelOrderRequest) returns (CancelOrderReply) {
    }
    rpc stepOrder (MatchOrderRequest) returns (MatchOrderReply) {
    }
    //wallet transfer in
    rpc TransferIn (TransferInRequest) returns (TransferInReply) {}
    //tradeWeb binding address && transfer out
    rpc TransferOut (TransferOutRequest) returns (TransferOutReply) {}
    rpc BindWallets (BindWalletsRequest) returns (BindWalletsReply) {}
}

// The request message containing the user's name.
message UserOrderRequest {
  string account = 1;
  string orderType=2;
  string orderSide=3;
  string amount=4;
  string assetPair = 5;
  string price = 6;
  string assertLimit = 7;
  string feeRate = 8;
}

// The response message containing the greetings
message UserOrderReply {
  bool state = 1;
  string orderId=2;
}

message CancelOrderRequest {
  string orderId=1;
  string account = 2;
}

message CancelOrderReply {
  bool state =1;
  bool message = 2;
}

message MatchOrderRequest {
    string buySideOrderId = 1;
    string buySideAccount = 2;
    string sellSideOrderId = 3;
    string sellSideAccount = 4;
    string matchAmount = 5;
    string matchPrice = 6;
    string matchOrderWaterflow = 7;
}

message MatchOrderReply {
    bool state = 1;
}
//撮合系统service



// The request message.
message TransferInRequest {
  string asset = 1;
  string fromAddress=2;
  string toAddress=3;
  double amount=4;
  string notes=5;
  string time=6;
}

// The response message
message TransferInReply {
  bool state = 1;
}


// The request message.
message TransferOutRequest {
  string asset = 1;
  string fee=2;
  string pubKey=3;
  string sign=4;
  message TransferIn{
    string fromaddress=1;
    string toaddr=2;
    double amount=3;
    string notes=4;
  }
  TransferIn transferin=5;
}

// The response message
message TransferOutReply {
  string id = 1;
}

// The request message.
message BindWalletsRequest {
  string asset = 1;
  string account=2;
}

// The response message
message BindWalletsReply {
  string address = 1;
}